chore:add boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
     <link rel="stylesheet" href="./scss/style.scss">
     <title>CalvicieModeOn</title>
 </head>
+<body>
+
+<script src="./JsBasicAlgorithms.js"></script>
+</body>
 
 </html>
